--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   get:
   dio: ^4.0.4
+  google_sign_in: ^5.2.4
+  firebase_auth: ^3.3.8
+  font_awesome_flutter: ^10.1.0
   
 dev_dependencies:
   flutter_test:
